apps/prod/merovelis/middleware-https.yml
# Traefik Middleware: HTTP -> HTTPS redirect
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: merovelis
spec:
  redirectScheme:
    scheme: https
    permanent: true
