apps/prod/merovelis/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: merovelis
  labels:
    app.kubernetes.io/part-of: merovelis
    environment: production
