apps/prod/merovelis/merovelis-site-svc.yml
# Merovelis Site Service
apiVersion: v1
kind: Service
metadata:
  name: merovelis-site
  namespace: merovelis
  labels:
    app.kubernetes.io/name: merovelis-site
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: merovelis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: merovelis-site
  ports:
    - name: http
      port: 80
      targetPort: 8080
